--- a/style.css
+++ b/style.css
@@ -52,14 +52,20 @@ img{
     color: white;
 }
 
-.ipaWord, .transcriptions{
-    letter-spacing:0.05em;
+.ipaWord, .transcriptions, #title{
+    span{
+        letter-spacing:0.05em;
+    }
 }
-.ipaWord::before{
-    content: "/";
+.ipaWord{
+    span::before{
+        content: "/";
+    }
 }
-.ipaWord::after{
-    content: "/";
+.ipaWord{
+    span::after{
+        content: "/";
+    }
 }
 .disabled{
     background-color: lightgrey;
@@ -171,6 +177,9 @@ input:focus{
     flex-grow: 1;
 }
 @media (orientation: landscape){
+    .dailyTimer{
+        font-size: normal;
+    }
     #guiBox{
         display: flex;
         align-items: stretch;
@@ -179,6 +188,7 @@ input:focus{
     .menuButton{
         font-size: 150%;
     }
+
     .mainMenuMultiChoice{
         button{
             font-size: xx-large;
@@ -186,6 +196,9 @@ input:focus{
         }
         .disabled{
             background-color: grey;
+        }
+        span{
+            padding: 0.25em;
         }
         padding: 0.5em;
     }
@@ -295,11 +308,14 @@ input:focus{
         }
     }
     #sharePreview{
-        height: 90vh;
+        height: 85vh;
     }
 }
 
 @media (orientation: portrait){
+    .dailyTimer{
+        font-size: large;
+    }
     .menuButton{
         font-size: 110%;
     }
@@ -311,6 +327,9 @@ input:focus{
             font-weight: bold;
             border: 2px solid black;
             padding: 0.05em;
+            span{
+                padding: 0.25em;
+            }
         }
         .disabled{
             border: 2px solid black;
@@ -477,6 +496,14 @@ input:focus{
         text-wrap: nowrap;
     }
 }
+#puzzleLink{
+    display: flex;
+    justify-content: center;
+    font-size: large;
+    span{
+        user-select: all !important;
+    }
+}
 #shareMenu{
     position: absolute;
     width: 100%;
@@ -496,6 +523,7 @@ input:focus{
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 0.25em;
     button{
         font-size: xx-large;
